--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.5",
     "@mantine/core": "^8.3.4",
     "@mantine/hooks": "^8.3.4",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
     "mongoose": "^8.19.1",
