--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "lottie-react": "^2.4.1",
     "mongoose": "^8.19.1",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
